--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,19 +7,23 @@
   "type": "commonjs",
   "main": "src/index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^148.0.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.8.6",
     "morgan": "^1.10.0",
     "socket.io": "^4.6.1",
+    "stream": "^0.0.3",
     "zod": "^3.24.3"
   },
   "devDependencies": {
