--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.9.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
